2004-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix for bug #1049503 - remove all writes to stdout
	and stderr and replaced with tk_messageBox or log::log. 
	log::log debug is the way to record debugging messages.

	* tkchat.tcl: Added support for connecting to jabber through http
	proxies using tls. 
	Also update the login dialog a bit. Better themeing support.

2004-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added command-line option for setting the jabber
	server and port eg: tkchat -jabberserver jabber80.com:80
	
2004-10-16  Pascal Scheffers  <pascal@scheffers.net>
        * tkchat.tcl: More work on Jabber

2004-10-14  Pascal Scheffers  <pascal@scheffers.net>
        * tkchat.tcl: Initial work to change the chat server to Jabber. Lots of
        changes all over the place.

2004-10-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Modified the startup to avoid multiple http requests
	if we get an authentication error during the logon. This avoids
	locking your account on a proxy server from too many failed login
	attempts (Windows networks). We now only do one request if it fails.
	Also changed the history loading to ensure we always load above
	any current chat text.
	Added a scrollbar to the smilies display dialog.
	* tkchat.tcl: Fixed a delay in positioning the panedwindow sash on
	startup.
	* tkchat.tcl: Grr. Stupid typo.

2004-10-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::Retrieve): Fixed a dumb bug introduced in
	1.178 that broke the download. Added a line limit to the size of
	message we attempt to display - too big a message can do funny
	things to the messagebox.

2004-09-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add user set-able value to fade too.
	(::tkchat::addMessage): Fixed dumb bug that meant messages from
	ircbridge with <xyz> would yield xyz as the sender. 

2004-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
